--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <td><img src="hiking_headshot.jpg"
         alt="zach erdman photo" height=200></td>
       <td><h1>zach erdman</h1>
-      <p><em>MBA at MIT Sloan<br>Product Manager at AirWorks</em></p>
+      <p><em>Product Manager at AirWorks</em></p>
       <p>
         I am an MBA student at MIT Sloan and I am passionate about product management, SaaS software, and data science.
       </p></td>
