--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <td><h1>zach erdman</h1>
       <p><em>Product Manager at AirWorks</em></p>
       <p>
-        I am an MBA student at MIT Sloan and I am passionate about product management, SaaS software, and data science.
+        I am a product manager at AirWorks and I am passionate about product management, SaaS software, and data science.
       </p></td>
     </tr>
   </table>
