updated website files
added css file

--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>projects</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <h1>TBD</h1>
 </html>
